--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,147 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
 }
+/* Component Anime Card */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.anime-card-carousel {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.anime-card {
+  position: relative;
+  width: 290px;
+  height: 360px;
+  margin: 20px;
+  max-width: 290px;
+}
+
+.image-container {
+  position: relative;
+  margin: 5%;
+  height: 100%;
+  width: 100%;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 8px;
+}
+
+.top-section {
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  background-color: rgba(245, 245, 245, 0.9);
+  padding: 6px;
+  border-radius: 8px;
+}
+
+.top-section p {
+  color: #ba201f;
+  font-size: 15px;
+}
+
+.bottom-section {
+  position: absolute;
+  bottom: 0px;
+  background-color: rgba(245, 245, 245, 0.9);
+  padding: 10px;
+  width: calc(100% - 20px);
+  height: 150px;
+}
+
+.bottom-section ul {
+  list-style-type: none;
+  display: flex;
+}
+
+.bottom-section ul li {
+  margin-right: 5%;
+  color: #767778;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 10px;
+}
+
+.bottom-section > p {
+  color: #ba201f;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-bottom: 10px;
+  margin-top: 40px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.button-container {
+  position: absolute;
+  top: 8px;
+  right: 25px;
+  border-radius: 4px;
+  border: #ba201f solid 2px;
+  color: #ba201f;
+  font-family: Roboto;
+  font-size: 10px;
+  font-weight: 400;
+  width: 110px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 1%;
 }
 
-.App-link {
-  color: #61dafb;
+.button-container p {
+  font-size: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title-container img {
+  width: 46px;
+  margin-right: 30px;
+}
+
+.title-container h3 {
+  color: #ba201f;
+  font-family: Roboto;
+  font-size: 30px;
+  font-weight: 500;
+}
+
+.title-container {
+  display: flex;
+  width: 990px;
+  padding: 9px 15px;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 8px;
+  border: 1px solid #fff;
+  background: linear-gradient(
+      318deg,
+      rgba(0, 0, 0, 0.4) 0%,
+      rgba(255, 255, 255, 0.4) 105.18%
+    ),
+    #fff;
+  background-blend-mode: soft-light, normal;
+  box-shadow: 5px 5px 10px 0px #a6abbd, -5px -5px 10px 0px #fafbff;
+}
+
+.title-container > div {
+  display: flex;
+  align-items: center;
 }
