--- a/src/App.css
+++ b/src/App.css
@@ -17,12 +17,23 @@ h2 {
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 20px;
+  margin: 60px 0px 20px 0px ;
 }
 
 .container {
   max-width: 1200px;
   margin: 0 auto;
+}
+
+/* Header */
+
+.header-container {
+    display: flex;
+}
+.header-links {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
 }
 
 /* Home */
@@ -57,15 +68,20 @@ h2 {
     width: 100%;
     height: 100%;
     color: white; 
-    background-color: rgba(0, 0, 0, 0.6); 
+    background-color: rgba(22, 2, 2, 0.6); 
+    
 }
   
-.banner > div > p:first-child {
+.banner-content {
+    padding: 0% 2%;
+    width: 800px;
+}
+.banner-content > p:first-child {
     font-size: 25px;
     font-style: normal;
     font-weight: 500;
     margin: 75px 0px 40px;
-    margin-bottom: 40px;
+
   }
 
   .banner > div h1 {
@@ -81,6 +97,7 @@ h2 {
     width: 650px;
     font-size: 20px;
     margin-bottom: 60px;
+    line-height: 25px;
 }
 
 .banner-button {
