--- a/src/App.css
+++ b/src/App.css
@@ -27,15 +27,116 @@ h2 {
 
 /* Header */
 
+header {
+    height: 100px;
+    display: flex;
+    align-items: center;
+    padding: 0% 2%;
+    box-shadow: 10px 4px 20px rgba(0, 0, 0, 0.15);
+    margin-bottom: 4%;
+}
 .header-container {
     display: flex;
+    width: 100%;
+    align-items: center;
 }
 .header-links {
     display: flex;
     justify-content: space-around;
     width: 100%;
+    align-items: center;
 }
 
+.header-links a {
+    color: #767778;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 400;
+    text-decoration: none;
+}
+
+header form {
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.25);
+    padding: 11px 15px;
+    display: flex;
+    align-items: center;
+}
+
+header form input {
+    border: none;
+    margin-right: 10px;
+}
+
+header form button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+/* Footer */
+footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 8% 5% 5% 5%;
+    box-shadow: -10px 4px 20px rgba(0, 0, 0, 0.15);
+    background-image: url("./images/ocean.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    position: relative;
+    margin-top: 10%;
+
+ 
+}
+.logo-footer {
+    position: absolute;
+    top: -100px;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+footer a {
+    text-decoration: none;
+    color: #767778;
+}
+
+footer p {
+    line-height: 25px;
+    color: #767778;
+}
+.footer-title {
+    color: #BA201F;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 35px;
+}
+
+.apropos p{
+    width: 190px;
+    line-height: 20px;
+}
+
+footer > div:last-child button{
+    width: 48px;
+    height: 48px;
+    border-radius: 8px;
+    border: none;
+    background: linear-gradient(
+        318deg,
+        rgba(0, 0, 0, 0.4) 0%,
+        rgba(255, 255, 255, 0.4) 105.18%
+      ),
+      #fff;
+    background-blend-mode: soft-light, normal;
+    box-shadow: 5px 5px 10px 0px #a6abbd, -5px -5px 10px 0px #fafbff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
 /* Home */
 
 .background {
