--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,15 @@ a {
 }
 
 h2 {
-  color: #ba201f;
-  font-family: Caveat Brush;
-  font-size: 60px;
-  font-weight: 400;
-  text-transform: uppercase;
-  text-align: center;
-  margin: 60px 0px 20px 0px ;
+    color: #BA201F;
+    text-align: center;
+    font-family: Bangers;
+    font-size: 75px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-transform: uppercase;
+    margin: 70px 0px 20px 0px;
 }
 
 .container {
@@ -137,7 +139,7 @@ footer > div:last-child button{
     align-items: center;
     cursor: pointer;
 }
-/* Home */
+/* Homepage */
 
 .background {
   background-image: linear-gradient(
@@ -153,51 +155,88 @@ footer > div:last-child button{
 }
 .banner {
     position: relative;
-    height: 650px;
+    height: 615px;
+    display: flex;
+    justify-content: center;
+    padding: 0 3%;
+    border-radius: 10px;
 }
-.banner > img {
+
+.banner-img {
+    position: relative;
+    width: 800px; 
+    height: 600px;
+    overflow: hidden;
+    margin-left: auto; 
+    border-radius: 10px;
+  }
+
+  .banner-img div {
+    border-radius: 10px;
+  }
+
+  .img-banner-back {
+    position: relative;
     width: 100%;
-    height: 100%;
+    height: 600px;
     object-fit: cover;
-    object-position: center;
+    filter: blur(2px);
+    border-radius: 10px;
   }
   
-.banner > div {
+  .white-overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    color: white; 
-    background-color: rgba(22, 2, 2, 0.6); 
-    
-}
+    background-color: white;
+    opacity: 0.6;
+    pointer-events: none;
+    border-radius: 10px;
+  }
+  
+  .img-banner-front {
+    position: absolute;
+    top: 50%;
+    right: 50%; 
+    transform: translate(50%, -50%) scale(1.5); 
+    width: 400px;
+    height: 600px;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+  
+  
   
 .banner-content {
-    padding: 0% 2%;
-    width: 800px;
+    padding: 0% 0 0 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 600px;
 }
 .banner-content > p:first-child {
     font-size: 25px;
     font-style: normal;
     font-weight: 500;
-    margin: 75px 0px 40px;
+ 
 
   }
 
   .banner > div h1 {
     color: #BA201F;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
-    font-size: 55px;
-    font-weight: 700;
+    font-family: Bangers;
+    font-size: 110px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
     text-transform: uppercase;
-    margin-bottom: 40px;
 }
 
 .banner-truncate-text{
     width: 650px;
     font-size: 20px;
-    margin-bottom: 60px;
     line-height: 25px;
 }
 
@@ -217,14 +256,14 @@ border-radius: 8px;
 
 .banner-button > .button-addList p{
 margin: 0px 0px 0px 0px;
-color: white;
+color: #BA201F;
 font-size: 20px;
+font-weight: 600;
 }
 
 .banner-button > .button-addList img {
     width: 30px;
     height: 10px;
-    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(356deg) brightness(120%) contrast(103%);
 }
 
 .banner-button button {
@@ -416,4 +455,38 @@ margin-right: 30px;
 
 .title-container a {
   color: #ba201f;
+}
+
+/* Anime Page */
+
+.anime-page-banner {
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.anime-page-banner .img-banner-back {
+    border-radius: 0;
+    height: 595px;
+}
+
+.anime-page-banner .img-banner-front{
+    transform: translate(50%, -50%);
+}
+
+.anime-page-banner p {
+    text-align: center;
+    position: absolute;
+    top: 20%;
+    left: 0;
+    color: #FFF;
+    font-family: Bangers;
+    font-size: 36px;
+    font-weight: 400;
+    letter-spacing: 2px;
+    background-color: #BA201F;
+    width: 36%;
+    padding: 1.5% 1.5% 1.5% 3%;
 }
