--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ header {
     text-decoration: none;
 }
 
-header form {
+header > form {
     border-radius: 8px;
     background: #FFF;
     box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.25);
@@ -597,3 +597,77 @@ padding-bottom: 2%;
     padding-bottom: 3%;
     text-align: center;
 }
+
+/* Signup modal */
+
+.modal-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0.8);
+    z-index: 1000;
+  }
+  
+  .modal-content h2 {
+    text-align: left;
+    margin: 40px 0px 20px 0px;
+  }
+
+  .modal-content {
+    background: white;
+    border-radius: 10px;
+    border: solid #BA201F 10px;
+    box-shadow: 5px 5px 20px rgba(186, 32, 31, 1);
+    display: flex;
+    width: 80%;
+  }
+
+  .modal-form > form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .modal-form {
+    width: 30%;
+    padding-left: 2%;
+  }
+
+  .modal-form > form > input {
+    width: 290px;
+    height: 30px;
+    border-radius: 8px;
+    border: 2px solid #BA201F;
+    padding: 1%;
+    margin-bottom: 5%;
+
+  }
+
+  .modal-form > form > label {
+    color: #767778;
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 2%;
+  }
+
+  .modal-picture {
+    position: relative;
+    width: 70%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .modal-picture > img:first-child{
+    position: absolute;
+    top: 2%;
+    right: 2%;
+  }
+
+  
