--- a/src/App.css
+++ b/src/App.css
@@ -11,15 +11,15 @@ a {
 }
 
 h2 {
-    color: #BA201F;
-    text-align: center;
-    font-family: Bangers;
-    font-size: 75px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-transform: uppercase;
-    margin: 70px 0px 20px 0px;
+  color: #ba201f;
+  text-align: center;
+  font-family: Bangers;
+  font-size: 75px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  margin: 70px 0px 20px 0px;
 }
 
 .container {
@@ -30,114 +30,112 @@ h2 {
 /* Header */
 
 header {
-    height: 100px;
-    display: flex;
-    align-items: center;
-    padding: 0% 2%;
-    box-shadow: 10px 4px 20px rgba(0, 0, 0, 0.15);
-    margin-bottom: 4%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  padding: 0% 2%;
+  box-shadow: 10px 4px 20px rgba(0, 0, 0, 0.15);
+  margin-bottom: 4%;
 }
 .header-container {
-    display: flex;
-    width: 100%;
-    align-items: center;
+  display: flex;
+  width: 100%;
+  align-items: center;
 }
 .header-links {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    align-items: center;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  align-items: center;
 }
 
 .header-links > a {
-    color: #767778;
-    font-family: Roboto;
-    font-size: 20px;
-    font-weight: 400;
-    text-decoration: none;
+  color: #767778;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 400;
+  text-decoration: none;
 }
 
 .header-links > form {
-    border-radius: 8px;
-    background: #FFF;
-    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.25);
-    padding: 11px 15px;
-    display: flex;
-    align-items: center;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.25);
+  padding: 11px 15px;
+  display: flex;
+  align-items: center;
 }
 
-.header-links> form > input {
-    border: none;
-    margin-right: 10px;
+.header-links > form > input {
+  border: none;
+  margin-right: 10px;
 }
 
-.header-links> form > button {
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
+.header-links > form > button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 /* Footer */
 footer {
-    display: flex;
-    justify-content: space-between;
-    padding: 8% 5% 5% 5%;
-    box-shadow: -10px 4px 20px rgba(0, 0, 0, 0.15);
-    background-image: url("./images/ocean.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: bottom;
-    position: relative;
-    margin-top: 10%;
-
- 
+  display: flex;
+  justify-content: space-between;
+  padding: 8% 5% 5% 5%;
+  box-shadow: -10px 4px 20px rgba(0, 0, 0, 0.15);
+  background-image: url("./images/ocean.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom;
+  position: relative;
+  margin-top: 10%;
 }
 .logo-footer {
-    position: absolute;
-    top: -100px;
-    left: 0;
-    right: 0;
-    margin: auto;
+  position: absolute;
+  top: -100px;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 footer a {
-    text-decoration: none;
-    color: #767778;
+  text-decoration: none;
+  color: #767778;
 }
 
 footer p {
-    line-height: 25px;
-    color: #767778;
+  line-height: 25px;
+  color: #767778;
 }
 .footer-title {
-    color: #BA201F;
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 35px;
+  color: #ba201f;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 35px;
 }
 
-.apropos p{
-    width: 190px;
-    line-height: 20px;
+.apropos p {
+  width: 190px;
+  line-height: 20px;
 }
 
-footer > div:last-child button{
-    width: 48px;
-    height: 48px;
-    border-radius: 8px;
-    border: none;
-    background: linear-gradient(
-        318deg,
-        rgba(0, 0, 0, 0.4) 0%,
-        rgba(255, 255, 255, 0.4) 105.18%
-      ),
-      #fff;
-    background-blend-mode: soft-light, normal;
-    box-shadow: 5px 5px 10px 0px #a6abbd, -5px -5px 10px 0px #fafbff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+footer > div:last-child button {
+  width: 48px;
+  height: 48px;
+  border-radius: 8px;
+  border: none;
+  background: linear-gradient(
+      318deg,
+      rgba(0, 0, 0, 0.4) 0%,
+      rgba(255, 255, 255, 0.4) 105.18%
+    ),
+    #fff;
+  background-blend-mode: soft-light, normal;
+  box-shadow: 5px 5px 10px 0px #a6abbd, -5px -5px 10px 0px #fafbff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 /* Homepage */
 
@@ -154,131 +152,123 @@ footer > div:last-child button{
   padding-top: 10px;
 }
 .banner {
-    position: relative;
-    height: 615px;
-    display: flex;
-    justify-content: center;
-    padding: 0 3%;
-    border-radius: 10px;
+  position: relative;
+  height: 615px;
+  display: flex;
+  justify-content: center;
+  padding: 0 3%;
+  border-radius: 10px;
 }
 
 .banner-img {
-    position: relative;
-    width: 800px; 
-    height: 600px;
-    overflow: hidden;
-    margin-left: auto; 
-    border-radius: 10px;
-  }
+  position: relative;
+  width: 800px;
+  height: 600px;
+  overflow: hidden;
+  margin-left: auto;
+  border-radius: 10px;
+}
 
-  .banner-img div {
-    border-radius: 10px;
-  }
+.banner-img div {
+  border-radius: 10px;
+}
 
-  .img-banner-back {
-    position: relative;
-    width: 100%;
-    height: 600px;
-    object-fit: cover;
-    filter: blur(2px);
-    border-radius: 10px;
-  }
-  
-  .white-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    opacity: 0.6;
-    pointer-events: none;
-    border-radius: 10px;
-  }
-  
-  .img-banner-front {
-    position: absolute;
-    top: 50%;
-    right: 50%; 
-    transform: translate(50%, -50%) scale(1.5); 
-    width: 400px;
-    height: 600px;
-    object-fit: cover;
-    border-radius: 10px;
-  }
-  
-  
-  
+.img-banner-back {
+  position: relative;
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  filter: blur(2px);
+  border-radius: 10px;
+}
+
+.white-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0.6;
+  pointer-events: none;
+  border-radius: 10px;
+}
+
+.img-banner-front {
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%) scale(1.5);
+  width: 400px;
+  height: 600px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
 .banner-content {
-    padding: 0% 0 0 2%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    height: 600px;
+  padding: 0% 0 0 2%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 600px;
 }
 .banner-content > p:first-child {
-    font-size: 25px;
-    font-style: normal;
-    font-weight: 500;
- 
-
-  }
-
-  .banner > div h1 {
-    color: #BA201F;
-    font-family: Bangers;
-    font-size: 110px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-transform: uppercase;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 500;
 }
 
-.banner-truncate-text{
-    width: 650px;
-    font-size: 20px;
-    line-height: 25px;
+.banner > div h1 {
+  color: #ba201f;
+  font-family: Bangers;
+  font-size: 110px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.banner-truncate-text {
+  width: 650px;
+  font-size: 20px;
+  line-height: 25px;
 }
 
 .banner-button {
-display: flex;
-
+  display: flex;
 }
 
 .banner-button > .button-addList {
-padding: 0%;
-width: 175px;
-height: 41px;
-border: #ba201f solid 4px;
-border-radius: 8px;
-
+  padding: 0%;
+  width: 175px;
+  height: 41px;
+  border: #ba201f solid 4px;
+  border-radius: 8px;
 }
 
-.banner-button > .button-addList p{
-margin: 0px 0px 0px 0px;
-color: #BA201F;
-font-size: 20px;
-font-weight: 600;
+.banner-button > .button-addList p {
+  margin: 0px 0px 0px 0px;
+  color: #ba201f;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .banner-button > .button-addList img {
-    width: 30px;
-    height: 10px;
+  width: 30px;
+  height: 10px;
 }
 
 .banner-button button {
-width: 180px;
-height: 45px;
-border-radius: 8px;
-background: #BA201F;
-color: #FFF;
-font-size: 20px;
-font-weight: 600;
-border: none;
-cursor: pointer;
-margin-right: 30px;
-
-
+  width: 180px;
+  height: 45px;
+  border-radius: 8px;
+  background: #ba201f;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  margin-right: 30px;
 }
 .carousel {
   display: flex;
@@ -340,6 +330,7 @@ margin-right: 30px;
   background-color: rgba(245, 245, 245, 0.9);
   padding: 6px;
   border-radius: 8px;
+  border: #ba201f solid 2px;
 }
 
 .top-section p {
@@ -379,7 +370,7 @@ margin-right: 30px;
   font-weight: 500;
   line-height: normal;
   margin-bottom: 10px;
-  margin-top: 40px;
+  margin-top: 15px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -393,6 +384,7 @@ margin-right: 30px;
   font-size: 20px;
   font-weight: 400;
   width: 150px;
+
   cursor: pointer;
   display: flex;
   justify-content: space-evenly;
@@ -401,16 +393,17 @@ margin-right: 30px;
 }
 
 .button-addList img {
-    width: 9px;
-    height: 5px;
+  width: 9px;
+  height: 5px;
 }
 
 .anime-card-carousel .button-addList {
   position: absolute;
-  top: 8px;
+  top: -145px;
   right: 25px;
-  font-size: 15px;
-  width: 110px;
+  font-size: 14px;
+  width: 135px;
+  background-color: rgba(245, 245, 245, 0.9);
 }
 
 .button-container p {
@@ -461,267 +454,267 @@ margin-right: 30px;
 /* Anime Page */
 
 .anime-page-banner {
-    height: 600px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 .anime-page-banner .img-banner-back {
-    border-radius: 0;
-    height: 595px;
+  border-radius: 0;
+  height: 595px;
 }
 
-.anime-page-banner .img-banner-front{
-    transform: translate(50%, -50%);
+.anime-page-banner .img-banner-front {
+  transform: translate(50%, -50%);
 }
 
 .anime-page-banner p {
-    text-align: center;
-    position: absolute;
-    top: 20%;
-    left: 0;
-    color: #FFF;
-    font-family: Bangers;
-    font-size: 36px;
-    font-weight: 400;
-    letter-spacing: 2px;
-    background-color: #BA201F;
-    width: 36%;
-    padding: 1.5% 1.5% 1.5% 3%;
+  text-align: center;
+  position: absolute;
+  top: 20%;
+  left: 0;
+  color: #fff;
+  font-family: Bangers;
+  font-size: 36px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  background-color: #ba201f;
+  width: 36%;
+  padding: 1.5% 1.5% 1.5% 3%;
 }
 
 .info-section {
-padding: 5% 5% 0 5%;
+  padding: 5% 5% 0 5%;
 }
 
 .title-score {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .title-score h1 {
-    color: #BA201F;
-    font-family: Bangers;
-    font-size: 80px;
-    font-weight: 400;
-    text-transform: uppercase;
-    max-width: 70%;
-    padding-bottom: 2%;
+  color: #ba201f;
+  font-family: Bangers;
+  font-size: 80px;
+  font-weight: 400;
+  text-transform: uppercase;
+  max-width: 70%;
+  padding-bottom: 2%;
 }
 
 .anime-page-buttons {
-    display: flex;
+  display: flex;
 }
 
 .anime-page-description {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .anime-page-description div:first-child {
-    width: 60%;
-    color: #767778;
-    font-family: Roboto;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    padding: 2% 0% 0% 0%;
+  width: 60%;
+  color: #767778;
+  font-family: Roboto;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding: 2% 0% 0% 0%;
 }
 
 .anime-page-description div:last-child {
-    color: #767778;
-    font-family: Roboto;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    padding-top: 2%;
-    width: 35%;
+  color: #767778;
+  font-family: Roboto;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding-top: 2%;
+  width: 35%;
 }
 
 .anime-page-description div:last-child p {
-    padding-bottom: 2%;
-    font-weight: 700;
+  padding-bottom: 2%;
+  font-weight: 700;
 }
 
 .anime-page-description div:last-child span {
-   padding: 0% 0% 2% 2%;
-   font-weight: 400;
+  padding: 0% 0% 2% 2%;
+  font-weight: 400;
 }
 
 .anime-page-images h2 {
-text-align: left;
-font-size: 70px;
-padding-bottom: 2%;
+  text-align: left;
+  font-size: 70px;
+  padding-bottom: 2%;
 }
 
 .anime-page-images div {
-    height: 250px;
+  height: 250px;
 }
 
 .anime-card-carousel-img {
-    width: 250px;
-    object-fit: cover;
- 
+  width: 250px;
+  object-fit: cover;
 }
 
 .anime-card-carousel-img:not(:last-child) {
-    padding-right: 4%;
+  padding-right: 4%;
 }
 
-
-.anime-page-trailer h2{
-    text-align: left;
-    padding-bottom: 2%;
+.anime-page-trailer h2 {
+  text-align: left;
+  padding-bottom: 2%;
 }
 
 .iframe {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 2%;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 2%;
 }
 
 /* Search page */
 
 .search-page > h1 {
-    color: #BA201F;
-    font-family: Bangers;
-    font-size: 60px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-transform: uppercase;
-    padding-bottom: 3%;
-    text-align: center;
+  color: #ba201f;
+  font-family: Bangers;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  padding-bottom: 3%;
+  text-align: center;
 }
 
 /* Signup modal */
 
 .modal-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(255, 255, 255, 0.8);
-    z-index: 1000;
-  }
-  
-  .modal-content > h2 {
-    text-align: left;
-    margin: 40px 0px 20px 0px;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.8);
+  z-index: 1000;
+}
 
-  .modal-form > p {
-    color: #767778;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  } 
+.modal-content > h2 {
+  text-align: left;
+  margin: 40px 0px 20px 0px;
+}
 
-  .modal-form > p > a {
-    color: #BA201F;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  } 
+.modal-form > p {
+  color: #767778;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
 
-  .modal-content {
-    background: white;
-    border-radius: 10px;
-    border: solid #BA201F 10px;
-    box-shadow: 5px 5px 20px rgba(186, 32, 31, 1);
-    display: flex;
-    width: 80%;
-  }
+.modal-form > p > a {
+  color: #ba201f;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
 
-  .modal-form > form {
-    display: flex;
-    flex-direction: column;
+.modal-content {
+  background: white;
+  border-radius: 10px;
+  border: solid #ba201f 10px;
+  box-shadow: 5px 5px 20px rgba(186, 32, 31, 1);
+  display: flex;
+  width: 80%;
+}
 
-  }
+.modal-form > form {
+  display: flex;
+  flex-direction: column;
+}
 
-  .modal-form {
-    width: 30%;
-    padding-left: 2%;
-  }
-  .modal-form > form > button {
-    border-radius: 8px;
-    background: #BA201F;
-    height: 40px;
-    color: #FFF;
-    font-family: Roboto;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    border: none;
-    width: 70%;
-    margin: 5% 0%;
-  }
+.modal-form {
+  width: 30%;
+  padding-left: 2%;
+}
+.modal-form > form > button {
+  border-radius: 8px;
+  background: #ba201f;
+  height: 40px;
+  color: #fff;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  border: none;
+  width: 70%;
+  margin: 5% 0%;
+}
 
-  .modal-form > form > input {
-    height: 30px;
-    border-radius: 8px;
-    border: 2px solid #BA201F;
-    padding: 1%;
-    margin-bottom: 5%;
-    width: 67%;
+.modal-form > form > input {
+  height: 30px;
+  border-radius: 8px;
+  border: 2px solid #ba201f;
+  padding: 1%;
+  margin-bottom: 5%;
+  width: 67%;
+}
 
-  }
+.modal-form > form > label {
+  color: #767778;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 2%;
+}
 
-  .modal-form > form > label {
-    color: #767778;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-bottom: 2%;
-  }
+.modal-picture {
+  position: relative;
+  width: 70%;
+  display: flex;
+  justify-content: flex-end;
+}
 
-  .modal-picture {
-    position: relative;
-    width: 70%;
-    display: flex;
-    justify-content: flex-end;
-  }
+.modal-picture > img:first-child {
+  position: absolute;
+  top: 2%;
+  right: 2%;
+}
 
-  .modal-picture > img:first-child{
-    position: absolute;
-    top: 2%;
-    right: 2%;
-  }
+.addPhoto {
+  display: flex;
+  align-items: center;
+}
 
-  .addPhoto {
-    display: flex;
-    align-items: center;
-  }
+.addPhoto > label {
+  width: 200px;
+  display: flex;
+  align-items: center;
+  color: #767778;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
 
-  .addPhoto > label {
-    width: 200px;
-    display: flex;
-    align-items: center;
-    color: #767778;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
+.addPhoto > label > img {
+  margin-left: 3%;
+}
 
-  .addPhoto > label > img {
-    margin-left: 3%;
-  }
+/* page My List */
 
-  
+.myList {
+  justify-content: flex-start;
+}
