--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ header {
 }
 .header-links {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   width: 100%;
   align-items: center;
 }
@@ -55,6 +55,15 @@ header {
   font-size: 20px;
   font-weight: 400;
   text-decoration: none;
+}
+
+.profile-menu > p {
+  color: #767778;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 400;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .header-links > form {
@@ -75,6 +84,29 @@ header {
   border: none;
   background-color: transparent;
   cursor: pointer;
+}
+
+.dropdown-menu {
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  top: 22%;
+}
+
+.dropdown-menu > p {
+  color: #767778;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 400;
+  text-decoration: none;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.dropdown-menu > p:hover {
+  color: #ba201f;
 }
 
 /* Footer */
