--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,6 @@ header {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  top: 22%;
 }
 
 .dropdown-menu > p {
@@ -103,6 +102,7 @@ header {
   text-decoration: none;
   cursor: pointer;
   padding: 10px;
+  top: 22%;
 }
 
 .dropdown-menu > p:hover {
@@ -648,6 +648,10 @@ footer > div:last-child button {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  margin-bottom: 10%;
+}
+.modal-form > h2 {
+  text-align: left;
 }
 
 .modal-form > p > a {
